<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".View.MainActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/competitive_tic_tac_toe"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/game_title_font_size"
        android:typeface="serif"
        tools:visibility="visible"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <EditText
        android:id="@+id/player_one_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_player_one_s_name"
        android:inputType="textPersonName"
        android:layout_gravity="center"
        android:minHeight="48dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/player_two_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_player_two_s_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:layout_gravity="center"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>




    <Button
        android:id="@+id/instructions_button"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/instruction_button"/>

    <Button
        android:id="@+id/play_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/play" />

</LinearLayout>
