...
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/player_one_points_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/player_text_margin"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/move_piece_instructions_text"
            app:layout_constraintStart_toStartOf="@id/game_status_layout"
            tools:text="Player One: X" />

        <TextView
            android:id="@+id/player_two_points_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/player_text_margin"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="visible"
...
